<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.jtrfp</groupId>
	<artifactId>trcl</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Terminal Recall</name>
	<description>Engine remake for Terminal Velocity and Fury3</description>
	<url>http://www.jtrfp.org/</url>

	<developers>
		<developer>
			<id>cjritola</id>
			<name>Chuck Ritola</name>
			<email>cjritola@gmail.com</email>
			<roles>
				<role>developer</role>
			</roles>
			<properties>
				<picUrl>https://lh4.googleusercontent.com/-ZmHezAG1_0E/AAAAAAAAAAI/AAAAAAAAAAA/ErzgqyJ1tIY/s600-c-k/photo.jpg</picUrl>
			</properties>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>GNU General Public Licence Version 3</name>
			<url>http://www.gnu.org/licenses/gpl.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>git@github.com:jtrfp/terminal-recall</url>
		<connection>scm:git:git@github.com:jtrfp/terminal-recall.git</connection>
		<developerConnection>scm:git:git@github.com:jtrfp/terminal-recall.git</developerConnection>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<skipTests>false</skipTests>
		<skipITs>true</skipITs>
	</properties>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.20.1</version>
				<configuration>
					<trimStackTrace>false</trimStackTrace>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.20</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<dependencies>
		<dependency>
			<groupId>org.jogamp.gluegen</groupId>
			<artifactId>gluegen-rt-main</artifactId>
			<version>2.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.jogamp.jogl</groupId>
			<artifactId>jogl-all-main</artifactId>
			<version>2.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.2</version>
		</dependency>
		<dependency>
			<groupId>org.jtrfp</groupId>
			<artifactId>jtrfp</artifactId>
			<version>0.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.jtrfp</groupId>
			<artifactId>jfdt</artifactId>
			<version>1.1.2</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.7</version>
		</dependency>
		<dependency>
			<groupId>de.quippy</groupId>
			<artifactId>javamod</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.4</version>
		</dependency>
		<dependency>
			<groupId>com.nativelibs4java</groupId>
			<artifactId>ochafik-util</artifactId>
			<version>0.12</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.stefanbirkner</groupId>
			<artifactId>system-rules</artifactId>
			<version>1.16.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.1</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>2.0.2-beta</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>5.3.15</version>
		</dependency>
		<dependency>
			<groupId>net.java.jinput</groupId>
			<artifactId>jinput</artifactId>
			<version>2.0.9</version>
		</dependency>
		<dependency>
			<groupId>net.java.jinput</groupId>
			<artifactId>jinput</artifactId>
			<version>2.0.9</version>
			<classifier>natives-all</classifier>
		</dependency>
		<dependency>
			<groupId>commons-primitives</groupId>
			<artifactId>commons-primitives</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.20</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.jtattoo</groupId>
			<artifactId>JTattoo</artifactId>
			<version>1.6.13</version>
		</dependency>
		<dependency>
			<groupId>me.xdrop</groupId>
			<artifactId>fuzzywuzzy</artifactId>
			<version>1.3.1</version>
		</dependency>
	</dependencies>
	<build>

		<resources>
			<resource>
				<directory>src/main/resources/</directory>
				<filtering>false</filtering>
			</resource>
			<resource>
				<directory>src/main/properties/</directory>
				<includes>
					<include>buildNumber.properties</include>
				</includes>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-gpg-plugin</artifactId> 
				<executions> <execution> <id>sign-artifacts</id> <phase>verify</phase> <goals> 
				<goal>sign</goal> </goals> </execution> </executions> </plugin> -->
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.5.1</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>nexus-releases</serverId>
					<nexusUrl>https://oss.sonatype.org</nexusUrl>
					<stagingProfileId>1f138f325160b3</stagingProfileId>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<phase>install</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
						</configuration>
					</execution>

				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>timestamp-property</id>
						<goals>
							<goal>timestamp-property</goal>
						</goals>
						<phase>validate</phase>
						<configuration>
							<locale>UTC</locale>
							<name>currentYear</name>
							<pattern>yyyy</pattern>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<finalName>RunMe</finalName>
					<archive>
						<index>true</index>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>org.jtrfp.trcl.flow.RunMe</mainClass>
						</manifest>
						<manifestEntries>
							<mode>development</mode>
							<url>${project.url}</url>
							<key>value</key>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.10</version>
				<configuration>
					<skipTests>${skipTests}</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>1.7.25</version>
				<executions>
					<execution>
						<id>l4j-clui</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<headerType>gui</headerType>
							<outfile>target/RunMe.exe</outfile>
							<downloadUrl>https://adoptium.net/?variant=openjdk11</downloadUrl>
							<jar>target/RunMe.jar</jar>
							<errTitle>Terminal
								Recall</errTitle>
							<classPath>
								<mainClass>org.jtrfp.trcl.flow.RunMe</mainClass>
								<addDependencies>false</addDependencies>
								<preCp>anything</preCp>
							</classPath>
							<jre>
								<minVersion>11.0.1</minVersion>
								<opts>
									<opt>-Djava.endorsed.dirs=./endorsed</opt>
								</opts>
							</jre>
							<versionInfo>
								<fileVersion>0.0.0.1</fileVersion>
								<txtFileVersion>${buildNumber}</txtFileVersion>
								<fileDescription>Enhancement engine for Terminal Velocity and
									Fury3</fileDescription>
								<copyright>${project.inceptionDate}-${currentYear}</copyright>
								<productVersion>1.0.0.0</productVersion>
								<txtProductVersion>Version 1</txtProductVersion>
								<productName>Terminal Recall</productName>
								<internalName>TerminalRecall</internalName>
								<originalFilename>RunMe.exe</originalFilename>
							</versionInfo>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.20.1</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<argLine>-Xms1024m -Xmx1024m</argLine>
					<skipITs>${skipITs}</skipITs>
					<showSuccess>false</showSuccess>
					<trimStackTrace>false</trimStackTrace>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!-- Ignore/Execute plugin execution -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<!-- copy-dependency plugin -->
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-dependency-plugin</artifactId>
										<versionRange>[1.0.0,)</versionRange>
										<goals>
											<goal>copy-dependencies</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>